assets/css/style.css
* {
    margin: 0;
    padding: 0;
    border: 0;
}

.row {
    margin: 0;
    padding: 0;
}

/*--------------------------Navigation Section*/
.nav-section {
    background-color: #ffffff;
    min-height: 50px;
    margin-top: 5px;
    padding-bottom: 5px;
    border-bottom: 2px solid #000000;
}

#myname {
    font-size: 50px;
    margin-left: 10px;
    color: #606060;
    border-color: #fed93a;
    padding-left: 10px;
}

.right h2 {
    padding-top: 20px;
    text-align: center;
    font-size: 25px;
}

.nav-section a {
    text-decoration: none;
    color: black;
}

.active,
.mainhome:hover,
.right:hover {
    color: black;
    opacity: 1;
    display: block;
    font-weight: 500;
    text-decoration: underline;
    text-shadow: 1px 1px 1px #000000;
}

/*------------------------------Header Section*/
.header-section {
    min-height: 750px;
}

.bg-image1 {
    background-image: url(../images/it.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 750px;
    position: absolute;
    opacity: 0.5;
    width: 100vw;
    height: 95vh;
}

.profile-pic2 {
    display: block;
    margin-left: auto;
    margin-right: auto;
    border-radius: 50%;
    margin-top: 100px;
}

.bg-image2 {
    background-image: url(../images/journey.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 750px;
    position: absolute;
    opacity: 0.5;
    width: 100vw;
    height: 95vh;
}

.bg-image3 {
    background-image: url(../images/projects.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 750px;
    position: absolute;
    opacity: 0.5;
    width: 100vw;
    height: 95vh;
}

.bg-image4 {
    background-image: url(../images/connect.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 750px;
    position: absolute;
    opacity: 0.5;
    width: 100vw;
    height: 95vh;
}

.header-section h2,
h3 {
    font-weight: 700;
    text-align: center;
}

.header-section h2 {
    padding-top: 25px;
}

.title {
    padding: 50px;
    margin: auto;
    text-align: center;
    font-size: 55px;
}


/*--------------------------------Index Main Section*/
.main-section {
    margin: 7% 7% 5% 7%;
    object-fit: contain;
}

.aboutme-img {
    float: right;
    width: 100%;
}

.aboutme p {
    padding: 6% 0% 6% 5%;
}

.plane-img,
.laptop-img,
.fitness-img,
.cooking-img {
    width: 75%;
    border-radius: 50%;
    margin-top: 25px;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.travel-info,
.programming-info,
.fitness-info,
.cooking-info {
    padding: 100px 0px;
}

.left-travelhidden,
.left-fitnesshidden {
    visibility: hidden;
}

/*---------------------Journey Page*/
.skill-label {
    padding: 0 20px;
    font-weight: 500;
    font-size: 20px;
}

.progress {
    margin: 10px 20px;
    height: 2rem;
    width: 130%;
    font-size: 15px;
}

.html5,
.office {
    background-color: #00cc00;
}

.java,
.pm {
    background-color: #1a75ff;
}

.sql,
.jira {
    background-color: #ff471a;
}

.python,
.github {
    background-color: #000000;
}

.php,
arabic {
    background-color: #00802b;
}

.zendesk {
    background-color: #000099;
}

.servicenow {
    background-color: #b32d00;
}

.product {
    background-color: #000000;
}

.journey-item {
    margin-left: 30%;
    padding: 4em 2em 0em 2em;
    position: relative;
    color: black;
    border-left: 1px solid;
}

.journey-item p {
    padding: 1px;
    margin: 0;
}

.journey-item:before {
    content: attr(data-journeydates);
    position: absolute;
    left: 1.8em;
    top: 1.5em;
    display: block;
    font-family: "Exo", sans-serif;
    font-weight: 500;
    font-size: 1.1em;
    padding: 0;
    margin: 0;
    background-color: red;
    color: white;
    padding: 4px;
}

.journey-item:after {
    width: 12px;
    height: 12px;
    display: block;
    top: 2.4em;
    position: absolute;
    left: -6px;
    content: '';
    background: red;
    transform: rotate(45deg);
}

.journey-finisher {
    margin: 50px 30px 20px 30px;
    text-align: center;
}

/*--------------------------------Projects Page*/

.card {
    border: 1px solid #000000;
    height: 400px;
}

.projects p {
    padding: 1% 0% 6% 5%;
}

.timage {
    border-bottom: 1px solid #000000;
    width: 100%;
    height: 200px;
}

.container-thumb {
    padding: 10px;
}

.visitme {
    margin-left: 25%;
    width: 50%;
}

.visitme:hover {
    font-weight: 700;
}

/*--------------------------------Connect Page*/

.connect-title {
    top: 37%;
    left: 5%;
    position: absolute;
    text-align: center;
    color: #000000;
}

.questions {
    margin: 0 auto;
    text-align: center;
    line-height: 400%;
}

.connect-form {
    background-color: #FCFCFC;
}

.center-form {
    padding-top: 10px;
    margin: 0 auto;
    max-width: 70%;
}

#contactlabel {
    padding: 3%;
    text-align: center;
}

#user-fullname:hover,
#user-email:hover,
#user-number:hover,
#user-number:hover,
#user-message:hover {
    border: 1px solid #FF0000;
}

.labelatt {
    font-weight: 600;
}


#submit {
    background-color: #4CAF50;
    color: white;
    padding: 12px 20px;
    border: none;
    border-radius: 4px;
    float: right;
}

/*-----------------------------Footer Section*/
.footer-section {
    min-height: 150px;
    background-color: #f2f2f2;
    padding-top: 5px;
}

.footer-section a {
    text-decoration: none;
    color: #000000;
}

.footer-section a:hover {
    transform: scale(1.1);
    color: #000000;
    text-shadow: 1px 1px 1px #676767;
}

.quicklinks h4 {
    text-align: left;
}

.connect {
    text-align: center;
}

.social-logos {
    font-size: 40px;
}

.mycv {
    text-align: center;
}

.fa-file {
    font-size: 40px;
    padding-top: 10px;
}

@media only screen and (max-width: 768px) {
    * {
        margin: 0;
        padding: 0;
        border: 0;
    }

    .row {
        margin: 0;
        padding: 0;
    }

    #myname {
        padding: 20px;
        text-align: center;
        font-size: 30px;
    }

    /*-----------------------navigation bar*/
    #myname,
    .right {
        margin: 0;
        padding: 0;
    }

    .nav-section h2 {
        text-align: center;
        font-size: 17px;
        padding: 15px 10px 0px 10px;
    }

    /*-----------------------header section*/

    .header-section {
        min-height: 250px;
    }

    .profile-pic1 {
        position: absolute;
    }

    .profile-pic2 {
        margin-top: 50px;
        width: 40%;
        border-radius: 50%;
        margin-left: auto;
        margin-right: auto;
    }

    .header-section h2,
    h3 {
        font-size: 150%
    }

    .bg-image1,
    .bg-image2,
    .bg-image3,
    .bg-image4 {
        background-size: contain;
        max-height: 100px;
    }

    /*-----------------------index main section*/
    .main-section {
        margin: 35% 0 10% 0;
    }

    .aboutme p {
        padding: 1% 0%;
    }

    .interests h2 {
        font-size: 150%;
        text-align: center;
    }

    .interests p {
        margin: 0 3%;
    }

    .travel-info,
    .programming-info,
    .fitness-info,
    .cooking-info {
        padding: 65px 0px;
    }

    .left-travelhidden,
    .left-fitnesshidden {
        display: none;
    }

    /*-----------------------Journey section*/

    .progress-skills {
        display: none;
    }

    .journey-item {
        padding: 4em 2em 0em 2em;
    }

    .journey-item h4 {
        font-size: 18px;
    }

    .journey-item p {
        font-size: 13px;
    }

    .journey-item {
        margin-left: 60%;
    }

    .journey-item:before {
        content: attr(journey-dates);
        position: absolute;
        left: 1.8em;
        top: 2em;
        display: block;
        font-family: "Exo", sans-serif;
        font-weight: 500;
        font-size: 15px;
        padding: 0;
        margin: 0;
        background-color: red;
        color: white;
        padding: 4px;
    }

    .journey-item:after {
        width: 12px;
        height: 12px;
        display: block;
        top: 2.4em;
        position: absolute;
        background: red;
        transform: rotate(45deg);
    }

    .journey-finisher {
        margin: 50px 0 80px 0;
    }

    /*-----------------------portfolio Section */
    .projects p {
        margin: 0;
    }


    .card {
        margin: 20px;
    }

    .container-thumb p {
        font-size: 15px;
    }

    /*-----------------------Connect Section*/
    .connect-title,
    .connect-title h1 {
        top: 25%;
        left: 3%;
        font-size: 20px;
    }

    /*-----------------------footer*/
    .quicklinks h4,
    .connect h4,
    .mycv h4 {
        text-align: center;
        font-size: 20px;
    }

    .quicklinks a {
        font-size: 15px;
    }

    .footer-section {
        padding: 15px 0;
    }


    .social-logos {
        padding: 30px 0;
        font-size: 25px;
    }

    .cv {
        padding: 14px;
        font-size: 25px;
    }

}

@media only screen and (max-width: 425px) {

    .title {
        padding: 20px;
        margin: auto;
        text-align: center;
        font-size: 30px;
    }

    /*-----------------------navigation bar*/

    #myname {
        font-size: 35px;
        text-align: center;
        padding: 0;

    }

    .right{
        margin: 0;
        padding-top: 0;
        text-align: center;
        font-size: 15px;
    }

    /*-----------------------header section*/

    .profile-pic2 {
        margin-top:20px;
        margin-left: auto;
        margin-right: auto;
    }

    .header-section h2,
    h3 {
        font-size: 110%
    }

    .bg-image1,
    .bg-image2,
    .bg-image3,
    .bg-image4 {
        background-size: contain;
    }

    /*-----------------------index main section*/
    .main-section {
        margin: 10% 0;
    }

    .aboutme p {
        padding: 1% 0;
    }

    .interests h2 {
        font-size: 150%;
        text-align: center;
    }

    .left-travelhidden,
    .left-fitnesshidden{
        display: initial;
        visibility: visible;
    }

    .travel-info,
    .fitness-info {
        display: none;
    }

    .plane-img,
    .laptop-img,
    .fitness-img,
    .cooking-img {
        margin-bottom: 15px;
    }

    .programming-info,
    .cooking-info {
        padding: 10px 15px;
    }

    .progress-skills {
        display: none;
    }

    .journey-item {
        padding: 4em 2em 0em 2em;
    }

    .journey-item h4 {
        font-size: 18px;
        width: 150px;

    }

    .journey-item p {
        font-size: 13px;
        width: 150px;
    }

    .journey-item:before {
        content: attr(journey-dates);
        position: absolute;
        left: 1.8em;
        top: 2em;
        display: block;
        font-family: "Exo", sans-serif;
        font-weight: 500;
        font-size: 15px;
        padding: 0;
        margin: 0;
        background-color: red;
        color: white;
        padding: 4px;
        width: 150px;


    }

    .journey-item:after {
        width: 12px;
        height: 12px;
        display: block;
        top: 2.4em;
        position: absolute;
        background: red;
        transform: rotate(45deg);
    }

    .journey-finisher {
        margin: 50px 0 80px 0;
    }

    .connect-title,
    .connect-title h1 {
        top: 25%;
        left: 3%;
        font-size: 20px;
    }

    /*-----------------------footer*/
    .quicklinks,
    .quicklinks h4 {
        text-align: center;
    }

    .connect {
        padding: 30px 0;
    }


    .social-logos {
        padding: 10px 0;
    }

}

